resource view updated -- button alignment fixed for auth login viewing

--- a/angular-financial-depot/src/app/components/resources/resources.component.css
+++ b/angular-financial-depot/src/app/components/resources/resources.component.css
@@ -14,6 +14,8 @@ button:hover {
 
 .btn {
   border: 1px solid #fff;
+  margin: 10px 0px 0px 0px;
+  width: 200px;
 }
 
 .header {
@@ -63,18 +65,6 @@ button:hover {
   font-size: 30px;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
 
-}
-
-.admin-buttons {
-  margin-top: 16px;
-}
-
-.edit-btn {
-  margin-right: 8px;
-}
-
-.delete-btn {
-  margin-left: 8px;
 }
 
 .body-container {
